Use a fixed width for visible portion of workspace thumbnails
We will change the workspace thumbnail size as we get more thumbnails; it doesn't
really make sense to always show 1/5 of the thumbnails how big or small they are,
so instead show a CSS-configurable length.

https://bugzilla.gnome.org/show_bug.cgi?id=641879

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -268,6 +268,7 @@ StTooltip StLabel {
     border-right: 0px;
     border-radius: 9px 0px 0px 9px;
     background: #071524;
+    visible-width: 32px; /* Amount visible before hovering */
 }
 
 .workspace-thumbnails {
